5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4149/executions/1836_2603.log
== SUBMITION (2019-07-01 23:59:28) 
-- CODE:
from numpy import*
from numpy.linalg import*

a=array(eval(input("asdbuab:"))
a=a
for i in range(4):
	a[:,i]=sorted(a[:,i], reverse=True)
print(a)
-- EXECUTION TIME:
0.815305
-- ERROR:
  File "/home/codebench/codes/1836/2603/main.py", line 5
    a=a
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 23:59:40) 
-- CODE:
from numpy import*
from numpy.linalg import*

a=array(eval(input("asdbuab:"))
a=a
for i in range(4):
	a[:,i]=sorted(a[:,i], reverse=True)
print(a)
-- ERROR:
File "XXXX", line 5
    a=a
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 23:59:56) 
-- CODE:
from numpy import*
from numpy.linalg import*

a=array(eval(input("asdbuab:"))
a = a
for i in range(4):
	a[:,i]=sorted(a[:,i], reverse=True)
print(a)
-- ERROR:
File "XXXX", line 5
    a = a
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 00:00:04) 
-- CODE:
from numpy import*
from numpy.linalg import*

a=array(eval(input("asdbuab:"))

for i in range(4):
	a[:,i]=sorted(a[:,i], reverse=True)
print(a)
-- EXECUTION TIME:
0.502808
-- ERROR:
  File "/home/codebench/codes/1836/2603/main.py", line 6
    for i in range(4):
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 00:00:08) 
-- CODE:
from numpy import*
from numpy.linalg import*

a=array(eval(input("asdbuab:"))

for i in range(4):
	a[:,i]=sorted(a[:,i], reverse=True)
print(a)
-- EXECUTION TIME:
0.573609
-- ERROR:
  File "/home/codebench/codes/1836/2603/main.py", line 6
    for i in range(4):
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 00:00:23) 
-- CODE:
from numpy import*
from numpy.linalg import*

a=array(eval(input("asdbuab:"))

for i in range(4):
	a[:,i]=sorted(a[:,i], reverse=True)
print(a)
-- EXECUTION TIME:
0.615635
-- ERROR:
  File "/home/codebench/codes/1836/2603/main.py", line 6
    for i in range(4):
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 00:00:41) 
-- CODE:
from numpy import*
from numpy.linalg import*

a=array(eval(input("asdbuab:"))
a=b
for i in range(4):
	b[:,i]=sorted(a[:,i], reverse=True)
print(b)
-- ERROR:
File "XXXX", line 5
    a=b
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 00:03:52) 
-- CODE:
from numpy import*
from numpy.linalg import*

a=array(eval(input("asdbuab:"))
a=a
for i in range(4):
	a[:,i]=sorted(a[:,i], reverse=True)
print(a)
-- ERROR:
File "XXXX", line 5
    a=a
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 00:03:56) 
-- CODE:
from numpy import*
from numpy.linalg import*

a=array(eval(input("asdbuab:"))
a=a
for i in range(4):
	a[:,i]=sorted(a[:,i], reverse=True)
print(a)
-- EXECUTION TIME:
0.848084
-- ERROR:
  File "/home/codebench/codes/1836/2603/main.py", line 5
    a=a
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 00:04:35) 
-- CODE:
from numpy import*
from numpy.linalg import*

a=array(eval(input("asdbuab:"))

for i in range(4):
	a[:,i]=sorted(a[:,i], reverse=True)
print(a)
-- ERROR:
File "XXXX", line 6
    for i in range(4):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 00:05:18) 
-- CODE:
from numpy import*
from numpy.linalg import*

a=array(eval(input("asdbuab:"))

for x in range(4):
	a[:,i]=sorted(a[:,i], reverse=True)
print(a)
-- ERROR:
File "XXXX", line 6
    for x in range(4):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 00:06:02) 
-- CODE:
from numpy import*
from numpy.linalg import*

a=array(eval(input("asdbuab:"))
i=0
while (i<4):
	a[:,i]=sorted(a[:,i], reverse=True)
	i=i+1
print(a)
-- ERROR:
File "XXXX", line 5
    i=0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 00:06:09) 
-- CODE:
from numpy import*
from numpy.linalg import*

a=array(eval(input("asdbuab:"))
i=0
while (i<4):
	a[:,i]=sorted(a[:,i], reverse=True)
	i=i+1
print(a)
-- EXECUTION TIME:
0.589102
-- ERROR:
  File "/home/codebench/codes/1836/2603/main.py", line 5
    i=0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 00:06:10) 
-- CODE:
from numpy import*
from numpy.linalg import*

a=array(eval(input("asdbuab:"))
i=0
while (i<4):
	a[:,i]=sorted(a[:,i], reverse=True)
	i=i+1
print(a)
-- ERROR:
File "XXXX", line 5
    i=0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 00:06:12) 
-- CODE:
from numpy import*
from numpy.linalg import*

a=array(eval(input("asdbuab:"))
i=0
while (i<4):
	a[:,i]=sorted(a[:,i], reverse=True)
	i=i+1
print(a)
-- EXECUTION TIME:
1.36929
-- ERROR:
  File "/home/codebench/codes/1836/2603/main.py", line 5
    i=0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 00:06:12) 
-- CODE:
from numpy import*
from numpy.linalg import*

a=array(eval(input("asdbuab:"))
i=0
while (i<4):
	a[:,i]=sorted(a[:,i], reverse=True)
	i=i+1
print(a)
-- EXECUTION TIME:
1.83997
-- ERROR:
  File "/home/codebench/codes/1836/2603/main.py", line 5
    i=0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 08:12:52) 
-- CODE:
from numpy import*
from numpy.linalg import*

b=array(eval(input("asdbuab:"))
b=b
while (i<4):
	b[:,i]=sorted(b[:,i], reverse=True)
	i=i+1
print(b)
-- EXECUTION TIME:
0.529617
-- ERROR:
  File "/home/codebench/codes/1836/2603/main.py", line 5
    b=b
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:13:09) 
-- CODE:
from numpy import*
from numpy.linalg import*

b=array(eval(input("asdbuab:"))
b=b
for i in range(4):
	b[:,i]=sorted(b[:,i], reverse=True)
	i=i+1
print(b)
-- ERROR:
File "XXXX", line 5
    b=b
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:13:27) 
-- CODE:
from numpy import*
from numpy.linalg import*

b=array(eval(input("asdbuab:"))
b=b
for i in range(4):
	b[:,i]=sorted(b[:,i], reverse=True)

print(b)
-- ERROR:
File "XXXX", line 5
    b=b
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:13:29) 
-- CODE:
from numpy import*
from numpy.linalg import*

b=array(eval(input("asdbuab:"))
b=b
for i in range(4):
	b[:,i]=sorted(b[:,i], reverse=True)

print(b)
-- ERROR:
File "XXXX", line 5
    b=b
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 08:13:31) 
-- CODE:
from numpy import*
from numpy.linalg import*

b=array(eval(input("asdbuab:"))
b=b
for i in range(4):
	b[:,i]=sorted(b[:,i], reverse=True)

print(b)
-- EXECUTION TIME:
0.640699
-- ERROR:
  File "/home/codebench/codes/1836/2603/main.py", line 5
    b=b
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:14:02) 
-- CODE:
from numpy import*
from numpy.linalg import*

B=array(eval(input("asdbuab:"))
B=B
for i in range(4):
	b[:,i]=sorted(b[:,i], reverse=True)

print(b)
-- ERROR:
File "XXXX", line 5
    B=B
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:14:12) 
-- CODE:
from numpy import*
from numpy.linalg import*

b=array(eval(input("asdbuab:"))
b=b
for i in range(4):
	b[:,i]=sorted(b[:,i], reverse=True)

print(b)
-- ERROR:
File "XXXX", line 5
    b=b
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 08:14:15) 
-- CODE:
from numpy import*
from numpy.linalg import*

b=array(eval(input("asdbuab:"))
b=b
for i in range(4):
	b[:,i]=sorted(b[:,i], reverse=True)

print(b)
-- EXECUTION TIME:
0.774713
-- ERROR:
  File "/home/codebench/codes/1836/2603/main.py", line 5
    b=b
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:14:22) 
-- CODE:
from numpy import*
from numpy.linalg import*

b=array(eval(input("asdbuab:"))
b==b
for i in range(4):
	b[:,i]=sorted(b[:,i], reverse=True)

print(b)
-- ERROR:
File "XXXX", line 5
    b==b
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 08:14:25) 
-- CODE:
from numpy import*
from numpy.linalg import*

b=array(eval(input("asdbuab:"))
b==b
for i in range(4):
	b[:,i]=sorted(b[:,i], reverse=True)

print(b)
-- EXECUTION TIME:
0.561576
-- ERROR:
  File "/home/codebench/codes/1836/2603/main.py", line 5
    b==b
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:14:34) 
-- CODE:
from numpy import*
from numpy.linalg import*

b=array(eval(input("asdbuab:"))
b = b
for i in range(4):
	b[:,i]=sorted(b[:,i], reverse=True)

print(b)
-- ERROR:
File "XXXX", line 5
    b = b
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 08:14:34) 
-- CODE:
from numpy import*
from numpy.linalg import*

b=array(eval(input("asdbuab:"))
b = b
for i in range(4):
	b[:,i]=sorted(b[:,i], reverse=True)

print(b)
-- EXECUTION TIME:
0.547557
-- ERROR:
  File "/home/codebench/codes/1836/2603/main.py", line 5
    b = b
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:14:46) 
-- CODE:
from numpy import*
from numpy.linalg import*

b=array(eval(input("asdbuab:"))
		  
		  
b = b
		  
		  
for i in range(4):
	b[:,i]=sorted(b[:,i], reverse=True)

print(b)
-- ERROR:
File "XXXX", line 7
    b = b
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 08:14:47) 
-- CODE:
from numpy import*
from numpy.linalg import*

b=array(eval(input("asdbuab:"))
		  
		  
b = b
		  
		  
for i in range(4):
	b[:,i]=sorted(b[:,i], reverse=True)

print(b)
-- EXECUTION TIME:
0.547535
-- ERROR:
  File "/home/codebench/codes/1836/2603/main.py", line 7
    b = b
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:14:51) 
-- CODE:
from numpy import*
from numpy.linalg import*

b=array(eval(input("asdbuab:"))
		  
		  
b  =  b
		  
		  
for i in range(4):
	b[:,i]=sorted(b[:,i], reverse=True)

print(b)
-- ERROR:
File "XXXX", line 7
    b  =  b
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:15:39) 
-- CODE:
from numpy import*
from numpy.linalg import*

b=array(eval(input("asdbuab:"))
		  
		  
b = b1
		  
		  
for i in range(4):
	b[:,i]=sorted(b[:,i], reverse=True)

print(b)
-- ERROR:
File "XXXX", line 7
    b = b1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:15:40) 
-- CODE:
from numpy import*
from numpy.linalg import*

b=array(eval(input("asdbuab:"))
		  
		  
b = b1
		  
		  
for i in range(4):
	b[:,i]=sorted(b[:,i], reverse=True)

print(b)
-- ERROR:
File "XXXX", line 7
    b = b1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:16:16) 
-- CODE:
from numpy import*
from numpy.linalg import*

b=array(eval(input("a")))
		  
		  
b = b
		  
		  
for i in range(4):
	b[:,i]=sorted(b[:,i], reverse=True)

print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 08:16:41) 
-- CODE:
from numpy import*
from numpy.linalg import*

b=array(eval(input("a")))
		  
		  
b = b
		  
		  
for i in range(4):
	b[:,i]=sorted(b[:,i], reverse=True)

print(b)
-- EXECUTION TIME:
1.11262
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[4 4 4 3]
 [3 3 3 3]
 [2 2 2 3]
 [1 1 1 3]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
